Fix distortion of some non-CSS image-submit buttons

--- a/includes/templates/responsive_classic/css/stylesheet.css
+++ b/includes/templates/responsive_classic/css/stylesheet.css
@@ -74,7 +74,7 @@ LABEL#textAreaReviews {font-weight:normal;margin:1em 0;}
 input[type=text]{width:50%;}
 #password-current, #login-password, #password-new, #password-confirm{width:50%;}
 input[type=radio], input[type=checkbox]{margin-top:8px;vertical-align:middle;height:auto;}
-input[type=file], input[type=image]{border:none;}
+input[type=file], input[type=image]{border:none;width:auto;height:auto;}
 
 /*bof warnings, errors, messages*/
 .messageStackWarning, .messageStackError, .messageStackSuccess, .messageStackCaution {line-height:1.8em;padding:20px;}
